--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Driver Standings</title>
+  <title>Mighty Grip Leaderboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="l-wrapper" id="wrapper"></div>
-<div class="c-drawer" id="drawer">
+<div class="l-wrapper" id="wrapper"><div id="logo"><img src="log.png" width="30%" alt=""></div>
+<div class="c-drawer" id="drawer" hidden>
   <div class="c-swipe-zone" id="swipeZone"></div>
   <div class="c-drawer__handle"></div>
   <h4>Settings</h4>
