--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="l-wrapper" id="wrapper"><div id="logo"><img src="log.png" width="30%" alt=""></div>
+<div class="l-wrapper" id="wrapper"><div id="logo"><img src="log.png" width="25%" alt=""><img src="arnold.png" width="35%" alt=""></div>
 <div class="c-drawer" id="drawer" hidden>
   <div class="c-swipe-zone" id="swipeZone"></div>
   <div class="c-drawer__handle"></div>
